cambie el index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-es">
 <head >
-    <title>Mi primera actividad</title>
+    <title>Mi primera actividad from develop</title>
     <meta charset='utf-8'>
     <style>
         table, th, td {
