--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-es">
 <head>
-    <title>Mi web de practica prueba</title>
+    <title>Mi web de practica </title>
     <!-- Dentro del head enlazar archivos css
     enlazar archivos js
     anadir fuentes externas
