--- a/blog.html
+++ b/blog.html
@@ -174,7 +174,7 @@
     <form id="form" name="form" method="post" action="suscribe.php">
         <span>Si quieres enterarte de los nuevos cursos, suscríbete.</span>
 
-     <input id="email" name="email" type="text" placeholder="Introduce tu email" onfocus="if(this.placeholder == " ') this.placeholder="Introduce tu email" '="" >
+     <input id="email" name="email" type="text" placeholder="Introduce tu email" onfocus="if(this.placeholder == '') this.placeholder= 'Introduce tu email' = '' ">
 
      <input type="submit" name="Submit" id="button" value="Suscribete">
  </form>
